--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -3,6 +3,7 @@
   padding: 5px 25px 9px;
   border-radius: 100px;
   font-weight: 600;
+  transition: all 200ms ease;
   &:hover,
   &:focus,
   &:active {
